--- a/Shop.html
+++ b/Shop.html
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="images/solid.jpg" alt="Солидненько">
+                        <img src="images/solid.png" alt="Солидненько">
                         <div class="product-info">
                             <h3>НАБОР</h3>
                             <p>СОЛИДНЕНЬКО</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="images/perfect.jpg" alt="Самое то">
+                        <img src="images/perfect.png" alt="Самое то">
                         <div class="product-info">
                             <h3>НАБОР</h3>
                             <p>САМОЕ ТО</p>
@@ -86,10 +86,10 @@
                         </div>
                     </div>
                     <div class="product-card">
-                        <img src="images/thief.jpg" alt="Воровское">
+                        <img src="images/thief.png" alt="Воровское">
                         <div class="product-info">
                             <h3>НАБОР</h3>
-                            <п>ВОРОВСКОЕ</п>
+                            <p>ВОРОВСКОЕ</p>
                             <h2>1 390 000</h2>
                         </div>
                         <div class="product-price">
@@ -100,7 +100,7 @@
                         <img src="images/gold.jpg" alt="Золотые запасы">
                         <div class="product-info">
                             <h3>НАБОР</h3>
-                            <п>ЗОЛОТЫЕ ЗАПАСЫ</п>
+                            <p>ЗОЛОТЫЕ ЗАПАСЫ</p>
                             <h2>7 500 000</h2>
                         </div>
                         <div class="product-price">
@@ -115,7 +115,7 @@
                         <img src="images/start.jpg" alt="Старт для начала">
                         <div class="product-info">
                             <h3>НАБОР</h3>
-                            <п>СТАРТ ДЛЯ НАЧАЛА</п>
+                            <p>СТАРТ ДЛЯ НАЧАЛА</p>
                             <h2>100 000</h2>
                         </div>
                         <div class="product-price">
@@ -128,17 +128,25 @@
             <div id="exclusive" class="tab-content">
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="images/start.jpg" alt="Старт для начала">
+                        <img src="images/e30.png" alt="BMW E30">
                         <div class="product-info">
-                            <h3>НАБОР</h3>
-                            <п>СТАРТ ДЛЯ НАЧАЛА</п>
-                            <h2>100 000</h2>
+                            <h3>BMW</h3>
+                            <p>E30</p>
                         </div>
                         <div class="product-price">
-                            <button>Купить за 100 ₽</button>
+                            <button>Купить за 50 ₽</button>
                         </div>
                     </div>
-                    <!-- Добавьте остальные блоки для эксклюзивного здесь -->
+                    <div class="product-card">
+                        <img src="images/bugatti.png" alt="Bugatti Chiron">
+                        <div class="product-info">
+                            <h3>Bugatti</h3>
+                            <p>CHIRON</p>
+                        </div>
+                        <div class="product-price">
+                            <button>Купить за 500 ₽</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
