--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <div class="step-content">
                         <h2>Скачать клиент</h2>
                         <p>Загрузите и установите клиент игры с нашего сайта.</p>
+                        <button class="download-btn">Скачать клиент</button>
                     </div>
                 </div>
                 <div class="step">
@@ -75,17 +76,24 @@
                 </div>
             </div>
         </section>
-        <section id="home">
-            <h1>Добро пожаловать на Beast RP</h1>
-            <p>Здесь вы найдете все необходимое для захватывающего игрового опыта в мире Криминальной России.</p>
-        </section>
-        <section id="news">
-            <h1>Новости</h1>
-            <p>Будьте в курсе последних событий и обновлений.</p>
-        </section>
         <section id="about">
             <h1>О нас</h1>
             <p>Узнайте больше о нашем проекте и команде.</p>
+            <div class="goals">
+                <h2>Наши Цели</h2>
+                <div class="goal">
+                    <h3>Цель 1</h3>
+                    <p>Развивать увлекательный и реалистичный игровой процесс для наших игроков.</p>
+                </div>
+                <div class="goal">
+                    <h3>Цель 2</h3>
+                    <p>Создать уникальную и динамичную игровую среду, поддерживающую творческие начинания.</p>
+                </div>
+                <div class="goal">
+                    <h3>Цель 3</h3>
+                    <p>Обеспечить стабильность и безопасность игрового процесса для комфортной игры.</p>
+                </div>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
