--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 </head>
 <body>
     <header>
-        <div class="logo">Beast RP</div>
+        <div class="navbar-logo">
+            <a href="index.html">BEAST RP </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="#steps">Как начать играть</a></li>
                 <li><a href="#news">Новости</a></li>
                 <li><a href="#about">О нас</a></li>
                 <li><a href="#help">Помощь</a></li>
+                <li><a href="/wiki/wiki.html">WIKI</a></li>
+                <li><a href="/donate/donate.html">Донат</a></li>
             </ul>
+            
         </nav>
     </header>
     <main>
